--- a/backend/academicerp/src/main/resources/application.properties
+++ b/backend/academicerp/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=academicerp
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/academic_erp?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Harshal@p0808
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.com.academicerp.academicerp=DEBUG
+logging.level.org.springframework.security=DEBUG
