--- a/backend/academicerp/src/main/resources/application.properties
+++ b/backend/academicerp/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Server Configuration
 server.port=8080
 
+# Spring MVC Configuration - Disable static resource handling for API paths
+spring.web.resources.add-mappings=false
+
 # Logging Configuration
 logging.level.com.academicerp.academicerp=DEBUG
 logging.level.org.springframework.security=DEBUG
@@ -27,12 +30,7 @@ jwt.expiration=86400000
 spring.security.oauth2.client.registration.google.client-id=586387810416-lfqu4t5a1p6skj1f01ot7s9s1ersvdjk.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.client-name=Google
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v3/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-spring.security.oauth2.client.provider.google.user-name-attribute=sub
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
 # Security Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
+# Removed jwt.issuer-uri to avoid conflict with OAuth2 login
