--- a/backend/academicerp/src/main/resources/application.properties
+++ b/backend/academicerp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=academicerp
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/academic_erp?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=harshal
 spring.datasource.password=Harshal@p0808
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
